show scrollbar always to calculate correct innerWidth

--- a/app/assets/stylesheets/pictures.css.scss
+++ b/app/assets/stylesheets/pictures.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the pictures controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html {
+  margin-bottom: 1px;
+  height: 100%;
+}
